Add pagination in posts.

--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ destination: _site/
 permalink: tutorials/:title.html
 description: Argon.js tutorial site.
 baseurl: /pages/ael/argon-tutorials
+paginate: 5
