--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ highlighter: pygments
 destination: _site/
 permalink: tutorials/:title.html
 description: Argon.js tutorial site.
-baseurl: /pages/ael/argon-tutorials
+baseurl: http://argonjs.github.io/argon-tutorials
